添加 app:firstDayOfWeek 属性

--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -8,5 +8,5 @@
     <color name="itemHighlightColor">#1F000000</color>
     <color name="itemFocusedColor">#1A000000</color>
 
-    <color name="defaultColor">#2962FF</color>
+    <color name="defaultColor">#5690EF</color>
 </resources>
