--- a/src/main/res/layout/calendar_view.xml
+++ b/src/main/res/layout/calendar_view.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@android:color/white"
     android:orientation="vertical">
 
@@ -10,14 +11,14 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/calendarHeader"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/defaultColor">
+        android:layout_height="wrap_content">
 
         <ImageButton
             android:id="@+id/previousButton"
             style="@style/Widget.AppCompat.Button.Borderless.Colored"
             android:layout_width="85dp"
             android:layout_height="0dp"
+            android:tint="@color/defaultColor"
             android:src="@drawable/ic_arrow_left"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -28,6 +29,7 @@
             style="@style/Widget.AppCompat.Button.Borderless.Colored"
             android:layout_width="85dp"
             android:layout_height="0dp"
+            android:tint="@color/defaultColor"
             android:src="@drawable/ic_arrow_right"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -38,8 +40,9 @@
             android:layout_width="0dp"
             android:layout_height="56dp"
             android:gravity="center"
-            android:textColor="@android:color/white"
+            android:textColor="@color/defaultColor"
             android:textSize="18sp"
+            tools:text="12 2020"
             app:layout_constraintLeft_toRightOf="@id/previousButton"
             app:layout_constraintRight_toLeftOf="@id/forwardButton"
             app:layout_constraintTop_toTopOf="parent" />
